force-app/main/default/objects/Candidate_Experience__c/Candidate_Experience__c.object-meta.xml
<CustomObject>
    <description>CV Review Agent - Candidate Experience</description>
    <label>Candidate Experience</label>
    <nameField>
        <label>Experience Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>