force-app/main/default/objects/Candidate_Experience__c/fields/End_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Text__c</fullName>
    <label>End Date Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>