force-app/main/default/objects/Candidate_Experience__c/fields/Has_Date_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Has_Date_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Date Conflict</label>
    <type>Checkbox</type>
</CustomField>