force-app/main/default/objects/Candidate_Experience__c/fields/Start_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Text__c</fullName>
    <label>Start Date Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>